--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="HandyPay"
     />
     <link rel="apple-touch-icon" href="https://i.ibb.co/1nG23t1/HandyPay.png" />
     <!--
